--- a/using-js/index.html
+++ b/using-js/index.html
@@ -12,7 +12,7 @@
     <!--FontAwesome-->
     <script src="https://kit.fontawesome.com/3121da2423.js" crossorigin="anonymous"></script>
     <!--CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 <div class="container">
@@ -36,6 +36,6 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <!-- JS script -->
-<script src="index.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
